Update ports for heroic

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<script type="text/javascript">
 		
-	var socketio = io.connect('http://10.150.51.117:21000/');
+	var socketio = io.connect('https://127.0.0.1:'+port);
 
 	socketio.on('message_to_client', function(data){
 		document.getElementById('chat-window').innerHTML += ('<div class="im">' + data.message + ' - Sent at ' + data.date + '</div>');
